# al-shirawi-vendor-dashboard

./: .gitignore  ANALYSIS_FEATURE.md  README.md  bedrock_header_extractor.py  combine_vendors.py  complete_workflow.py  debug_bonn.py  debug_bonn2.py  final_test.py  index_responses.py  main.py  pyproject.toml  run.py  server.py  start_dashboard.sh  test_cache.py  test_fix.py  test_fix2.py  test_pandas_header.py  test_structured_output.py  textract_tables.py  textract_to_csv.py  vendor_logic.py  workflow.py  workflow_enhanced.py
.cursor/rules/: project-structure.mdc
data/: Enquiry Email.txt  Response 3 - IKKT.txt  Response 4 - ElectroMechProjects.txt  Response 5 - Bonn Group.txt  Response 6 - nbiuae.txt
data/Enquiry Attachment/: J1684 Cable Tray & Trunking BOQ.xlsx
src/api/: server.py
src/core/: vendor_logic.py  workflow.py
src/processors/: index_responses.py  textract_to_csv.py
src/services/: bedrock_service.py  comparison_service.py  s3_service.py  textract_service.py
src/utils/: constants.py
static/: analysis.css  analysis.html  analysis.js  app.js  dashboard.css  dashboard.html  dashboard.js  home.html  index.html  styles.css
