[project]
name = "al-shirawi-orc-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3",
  "openpyxl>=3.1,<4",
  "boto3>=1.35,<2",
  "pdfplumber>=0.11,<1",  # Local PDF table extraction fallback
  "fastapi>=0.112,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]
